--- a/Fashion_MNIST.ipynb
+++ b/Fashion_MNIST.ipynb
@@ -1,28 +1,42 @@
 {
  "cells": [
+{
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Simple notebook to run fashion MNIST on TensorFlow 1.X.\n",
+    "\n",
+    "## How to start Session\n",
+    "\n","\n",
+    "First, click the `Sessions` menu  in the navigation bar on the left. Click the `Start` button in the upper right corner to create a new session.\n",
+    "\n",
+    "<div>\n<img src=\"https://user-images.githubusercontent.com/42667951/93175878-54884700-f76b-11ea-928f-d86a92cc5509.png\" width=700></div>\n",
+    "\n",
+    "Then you will see the following screen: Select **TensorFlow** for `Environments` and **1.15/ Python 3.6 / CUDA10** for `Version`. After that click `LAUNCH`\n",
+    "\n",
+    "<div>\n<img src=\"https://user-images.githubusercontent.com/42667951/93179383-91a30800-f770-11ea-88cd-9b2148ae2648.png\" width=300></div>\n",
+    "\n",
+    "If you launch the session, you can see this screen. Click `Jupyter Notebook`.\n",
+    "<div>\n<img src=\"https://user-images.githubusercontent.com/42667951/93179627-e6468300-f770-11ea-8d55-455bc8c106e0.png\" width=700></div>\n",
+    "\n",
+    "\n",
+    "Now, you can use Jupyter Notebook. You can create a new notebook in the `Tensorflow 1.15.3 on Python 3.6 (CUDA 10.0)` environment."
+   ]
+  },
+  {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "## fasion MNIST code",
+      "\n",
+      "This is a simple fasion MNIST code example."
+     ]
+  },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:528: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:529: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:530: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py:535: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
